--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <java.version>1.8</java.version>
         <querydsl.version>4.2.1</querydsl.version>
         <slf4j.version>1.6.1</slf4j.version>
+        <assert.core.version>3.11.1</assert.core.version>
     </properties>
 
     <dependencies>
@@ -79,6 +80,12 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assert.core.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
