--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
